--- a/hap-backend/env.example
+++ b/hap-backend/env.example
@@ -1,13 +1,24 @@
-# Database
-MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/hap-flashcard?retryWrites=true&w=majority
+# HAP FlashCard Backend Environment Variables
 
-# JWT
-JWT_SECRET=your-super-secret-jwt-key-here
+# Server Configuration
+NODE_ENV=development
+PORT=5000
+
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-here-make-it-at-least-32-characters-long
 JWT_EXPIRES_IN=7d
 
-# Server
-PORT=5000
-NODE_ENV=development
-
-# CORS
+# CORS Configuration
 FRONTEND_URL=http://localhost:5173
+
+# Database Configuration (choose one)
+
+# Option 1: PostgreSQL (Render) - Recommended
+# DATABASE_URL=postgres://username:password@localhost:5432/hap_flashcard
+
+# Option 2: MongoDB (Alternative)
+MONGO_URI=mongodb://localhost:27017/hap-flashcard
+
+# For production deployment, use these instead:
+# DATABASE_URL=postgres://username:password@host:port/database
+# MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/hap-flashcard
