--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npm run dev",
+    "backend:dev": "cd hap-backend && npm run dev",
+    "backend:build": "cd hap-backend && npm run build",
+    "backend:start": "cd hap-backend && npm start",
+    "setup": "npm install && cd hap-backend && npm install"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
