--- a/hap-backend/render.yaml
+++ b/hap-backend/render.yaml
@@ -27,7 +27,7 @@ services:
     #     property: connectionString
     # For MongoDB (alternative)
     - key: MONGO_URI
-      value: mongodb+srv://hap_user:SecurePassword123%21@hap-flashcards-cluster.nt4agov.mongodb.net/hap-flashcard?retryWrites=true&w=majority&appName=hap-flashcards-cluster
+      value: mongodb+srv://hetsondagar16_db_user:pHIcuRsSyQLxEFsm@hap-flashcards-cluster.nt4agov.mongodb.net/hap-flashcard?retryWrites=true&w=majority&appName=hap-flashcards-cluster
 
 databases:
   - name: hap-flashcard-db
